z-index fix

--- a/ballzone/css/drag.css
+++ b/ballzone/css/drag.css
@@ -8,7 +8,7 @@ h3 {
 .ribbon {
     position: fixed;
     width: 100%;
-    z-index: 900;
+    z-index: 500;
 }
 
 .drag {
@@ -71,33 +71,6 @@ h3 {
 .hover {
     background-color: #ccc;
     color: #fff;
-}
-
-.drop .drag::before {
-    line-height: 38px;
-    height: 36px;
-    width: 36px;
-    position: absolute;
-    left: -18px;
-    top: 0px;
-    color: #fff;
-    font-size: 24px;
-    font-weight: bold;
-    border-radius: 20px;
-    box-shadow: 0px 2px 10px #555;
-    border: solid 2px #fff;
-}
-
-.drop1 .drag::before {
-    content: "1";
-}
-
-.drop2 .drag::before {
-    content: "2";
-}
-
-.drop3 .drag::before {
-    content: "3";
 }
 
 .write-in {
